Corrected scrollbar problem

--- a/web_src/style.css
+++ b/web_src/style.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     padding-top: 50px;
     padding-left: 20px;
+    overflow: hidden;
 }
 
 #navbar {
@@ -59,12 +60,22 @@ input[type="button"] {
     font-size: 17px;
 }
 
+#page-content {
+    overflow: scroll;
+    width: 100%;
+    height: calc(100vh - 50px);
+    margin: 0;
+    padding: 0;
+    padding-top: 20px;
+}
+
 .visualization {
     display: inline-block;
     margin: 20px;
     margin-left: 0;
+    margin-top: 0;
     padding: 20px;
-    width: calc(50vw - 30px);
+    width: calc(50% - 60px);
     border-radius: 20px;
     background-color: #bdc3c7;
 }
